# miasma-sample

./: README.md  package.json
00-shai-hulud-campaign/: bindings.gyp
02-hades-campaign/: README.md  helloworld-setup.pth  pyproject.toml
02-hades-campaign/src/helloworld/: __init__.py  _index.js  core.py
03-hades-campaign/: composer.json
03-hades-campaign/.github/: setup.js
03-hades-campaign/src/: hello.php
04-atomic-campaign/: PKGBUILD  example.install
